1120-02 train cmd update.

--- a/content/AICUP_3D_U_Net_訓練_onProgress.ipynb
+++ b/content/AICUP_3D_U_Net_訓練_onProgress.ipynb
@@ -813,7 +813,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1122,7 +1122,8 @@
         "--val_every=5 \\\n",
         "--max_early_stop_count=20 \\\n",
         "--max_epoch=100 \\\n",
-        "--batch_siz=8 \\\n",
+        "--batch_siz=1 \\\n",
+        "--gradient_accumulation_step=8 \\\n",
         "--data_dicts_json={data_dicts_json} \\\n",
         "--pin_memory \\\n",
         "--out_channels=4 \\\n",
@@ -1135,12 +1136,14 @@
         "--norm_name='layer' \\\n",
         "--a_min=-200 \\\n",
         "--a_max=1500 \\\n",
-        "--space_x=0.7 \\\n",
-        "--space_y=0.7 \\\n",
+        "--space_x=1.0 \\\n",
+        "--space_y=1.0 \\\n",
         "--space_z=1.0 \\\n",
         "--roi_x=96 \\\n",
         "--roi_y=96 \\\n",
         "--roi_z=96 \\\n",
+        "--loss=\"compound_tversky_loss\" \\\n",
+        "--lambda_focal=0.3 \\\n",
         "--optim=\"AdamW\" \\\n",
         "--lr=5e-4 \\\n",
         "--weight_decay=5e-5 \\\n",
@@ -1710,8 +1713,8 @@
         "--norm_name='layer' \\\n",
         "--a_min=-100 \\\n",
         "--a_max=400 \\\n",
-        "--space_x=0.7 \\\n",
-        "--space_y=0.7 \\\n",
+        "--space_x=1.0 \\\n",
+        "--space_y=1.0 \\\n",
         "--space_z=1.0 \\\n",
         "--roi_x=96 \\\n",
         "--roi_y=96 \\\n",
