--- a/content/AICUP_3D_U_Net_訓練_onProgress.ipynb
+++ b/content/AICUP_3D_U_Net_訓練_onProgress.ipynb
@@ -1123,29 +1123,29 @@
         "--max_early_stop_count=20 \\\n",
         "--max_epoch=100 \\\n",
         "--batch_siz=1 \\\n",
-        "--gradient_accumulation_step=8 \\\n",
+        "--gradient_accumulation_step=16 \\\n",
         "--data_dicts_json={data_dicts_json} \\\n",
         "--pin_memory \\\n",
         "--out_channels=4 \\\n",
-        "--patch_size=4 \\\n",
+        "--patch_size=16 \\\n",
         "--feature_size=48 \\\n",
         "--drop_rate=0.1 \\\n",
         "--depths 3 3 9 3 \\\n",
         "--kernel_size 7 \\\n",
         "--exp_rate 4 \\\n",
         "--norm_name='layer' \\\n",
-        "--a_min=-200 \\\n",
-        "--a_max=1500 \\\n",
+        "--a_min=-42 \\\n",
+        "--a_max=423 \\\n",
         "--space_x=1.0 \\\n",
         "--space_y=1.0 \\\n",
         "--space_z=1.0 \\\n",
-        "--roi_x=96 \\\n",
-        "--roi_y=96 \\\n",
-        "--roi_z=96 \\\n",
+        "--roi_x=128 \\\n",
+        "--roi_y=128 \\\n",
+        "--roi_z=128 \\\n",
         "--loss=\"compound_tversky_loss\" \\\n",
         "--lambda_focal=0.3 \\\n",
         "--optim=\"AdamW\" \\\n",
-        "--lr=5e-4 \\\n",
+        "--lr=1e-4 \\\n",
         "--weight_decay=5e-5 \\\n",
         "--lrschedule=\"LinearWarmupCosineAnnealingLR\" \\\n",
         "--checkpoint={final_checkpoint} \\\n",
@@ -1185,7 +1185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1294,31 +1294,37 @@
         "--eval_dir={eval_dir} \\\n",
         "--data_dicts_json={data_dicts_json} \\\n",
         "--pin_memory \\\n",
+        "--batch_size=1 \\ \n",
+        "--gradient_accumulation_step=8 \\\n",
         "--out_channels=4 \\\n",
-        "--patch_size=4 \\\n",
+        "--patch_size=16 \\\n",
         "--feature_size=48 \\\n",
         "--drop_rate=0.1 \\\n",
         "--depths 3 3 9 3 \\\n",
         "--kernel_size 7 \\\n",
         "--exp_rate 4 \\\n",
-        "--norm_name='layer' \\\n",
+        "--norm_name='instance' \\\n",
         "--a_min=-42 \\\n",
         "--a_max=423 \\\n",
-        "--space_x=0.7 \\\n",
-        "--space_y=0.7 \\\n",
+        "--space_x=1.0 \\\n",
+        "--space_y=1.0 \\\n",
         "--space_z=1.0 \\\n",
         "--roi_x=96 \\\n",
         "--roi_y=96 \\\n",
         "--roi_z=96 \\\n",
+        "--loss=\"compound_tversky_loss\" \\\n",
+        "--lambda_focal=0.3 \\\n",
+        "--tversky_alpha=0.8 \\\n",
+        "--tversky_beta=0.2 \\\n",
         "--optim=\"AdamW\" \\\n",
         "--lr=5e-4 \\\n",
-        "--weight_decay=5e-4 \\\n",
+        "--weight_decay=5e-5 \\\n",
         "--checkpoint={final_checkpoint} \\\n",
         "--use_init_weights \\\n",
         "--infer_post_process \\\n",
         "--resume_tuner \\\n",
         "--save_eval_csv \\\n",
-        "--test_mode"
+        "--test_mode \\"
       ]
     },
     {
